# pl-ml-experiments

./: .gitignore  LICENSE  README.md  generate_json_schemas.py  pyproject.toml  setup.cfg
adlete_packages/: pyproject.toml
adlete_packages/src/adlete/: generate_json_schemas.py
adlete_packages/src/adlete/knowledge_tracing/shared/: datasets.py  kt_dataset.py
adlete_packages/src/adlete/knowledge_tracing/torch/: dataset.py  kt_lit_model.py
adlete_packages/src/adlete/knowledge_tracing/torch/dkt/: dkt.py
adlete_packages/src/adlete/pydantic/: generate_json_schema_externals.py  generate_json_schema_file.py
adlete_packages/src/adlete/torch/lightning_utils/: config_schema.json  config_schema.py
adlete_packages/src/adlete/training/: config_schema.json  config_schema.py  optimization.py  utils.py
adlete_packages/src/adlete/utils/: config.py  io.py  nested_props.py  paths.py  runs.py
src/experiments/: cli_configured.py
src/experiments/knowledge_tracing/: generate_json_schemas.py
src/experiments/knowledge_tracing/datasets/: config.yaml  config_schema.json  config_schema.py  download.py
src/experiments/knowledge_tracing/torch/dkt/: config.yaml  config_schema.json  config_schema.py  train.py
