[project]
name = "pl-ml-experiments"
version = "0.1.0"
description = "Personalized Learning Experiments with Machine Learning "
authors = [{ name = "and.selm@gmail.com", email = "and.selm@gmail.com" }]
requires-python = ">= 3.11"
dependencies = ["edudata"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.pixi.project]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
adlete = { path = "./adlete_packages", editable = true }
pl_ml_experiments = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
black = ">=24.4.2,<24.5"
flake8 = ">=7.0.0,<7.1"
torchaudio = ">=2.3.0,<2.4"
pytorch = ">=2.3.0,<2.4"
torchvision = ">=0.18.0,<0.19"
pytorch-cuda = "12.1.*"
munch = ">=4.0.0,<4.1"
yaml = ">=0.2.5,<0.3"
isort = ">=5.13.2,<5.14"
lightning = ">=2.2.4,<2.3"
pandas = ">=2.2.2,<2.3"
pydantic = ">=2.7.1,<2.8"
dill = ">=0.3.8,<0.4"
pydantic-yaml = ">=1.3.0,<1.4"
tensorboard = ">=2.16.2,<2.17"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
